# pixel-gen-studio

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.txt  README.md  vcpkg.json
include/PGS/core/: application.h  canvas.h  config.h  pixel_buffer.h  types.h
include/PGS/core/buffers/: grayscale_buffer.h  pixel_buffer.h  vector_field_buffer.h
include/PGS/core/managers/: document_manager.h  ui_manager.h  ui_manager_interface.h
include/PGS/generators/: procedural_generator.h
include/PGS/gui/: canvas.h  imgui_helpers.h  imgui_setup.h  types.h  ui_context.h  ui_events.h  ui_helpers.h  ui_manager.h  ui_manager_interface.h  widget.h  window_popup.h
include/PGS/gui/node_editor/: node_editor_renderer.h  node_editor_state.h  node_editor_widget.h
include/PGS/gui/node_editor/input/: command.h  commands.h  node_editor_input_handler.h
include/PGS/gui/widgets/: about_window.h  menu_bar.h  new_canvas_window.h
include/PGS/gui/windows/: about_window.h  new_canvas_window.h
include/PGS/node_graph/: converters.h  evaluator.h  evaluator_observer.h  helpers.h  node.h
include/PGS/node_graph/nodes/: checker_pattern_node.h  circle_pattern_node.h  combine_xy_node.h  gradient_texture_node.h  hsv_node.h  invert_color_node.h  mapping_node.h  math_node.h  mix_color_node.h  noise_texture_node.h  rectangle_pattern_node.h  rgb_node.h  separate_xy_node.h  texture_output_node.h  value_node.h  voronoi_texture_node.h
include/PGS/node_graph/utils/: perlin_noise_2d.h
include/PGS/nodegraph/: converters.h  evaluator.h  evaluator_observer.h  generator.h  helpers.h  node.h  types.h
include/PGS/nodegraph/nodes/: checker_pattern.h  checker_pattern_node.h  circle_pattern_node.h  gradient_texture_node.h  hsv_node.h  invert_color_node.h  math_node.h  mix_color_node.h  noise_texture_node.h  rectangle_pattern_node.h  rgb_node.h  texture_output_node.h  value_node.h  voronoi_texture_node.h
include/PGS/nodegraph/utils/: lerp.h  perlin_noise_2d.h
src/core/: application.cpp  canvas.cpp  main.cpp  pixel_buffer.cpp
src/core/buffers/: greyscale_buffer.cpp  pixel_buffer.cpp  vector_field_buffer.cpp
src/core/managers/: document_manager.cpp  ui_manager.cpp
src/gui/: canvas.cpp  imgui_setup.cpp  ui_manager.cpp
src/gui/node_editor/: node_editor_renderer.cpp  node_editor_state.cpp  node_editor_widget.cpp
src/gui/node_editor/input/: commands.cpp  node_editor_input_handler.cpp
src/gui/widgets/: about_window.cpp  menu_bar.cpp  new_canvas_window.cpp
src/gui/windows/: about_window.cpp  new_canvas_window.cpp
src/node_graph/: evaluator.cpp  node.cpp
src/node_graph/nodes/: checker_pattern_node.cpp  circle_pattern_node.cpp  combine_xy_node.cpp  gradient_texture_node.cpp  hsv_node.cpp  invert_color_node.cpp  mapping_node.cpp  math_node.cpp  mix_color_node.cpp  noise_texture_node.cpp  rectangle_pattern_node.cpp  rgb_node.cpp  separate_xy_node.cpp  texture_output_node.cpp  value_node.cpp  voronoi_texture_node.cpp
src/node_graph/utils/: perlin_noise_2d.cpp
src/nodegraph/: evaluator.cpp  node.cpp
src/nodegraph/nodes/: checker_pattern.cpp  checker_pattern_node.cpp  circle_pattern_node.cpp  gradient_texture_node.cpp  hsv_node.cpp  invert_color_node.cpp  math_node.cpp  mix_color_node.cpp  noise_texture_node.cpp  rectangle_pattern_node.cpp  rgb_node.cpp  texture_output_node.cpp  value_node.cpp  voronoi_texture_node.cpp
src/nodegraph/utils/: perlin_noise_2d.cpp
